# lv_binding_rust

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  Cross.toml  LICENSE  README.md  linux_bindings.rs  windows_bindings.rs
.github/workflows/: rust.yml
examples/: Cargo.toml  README.md  animation.rs  app.rs  arc.rs  bar.rs  button_click.rs  demo.rs  gauge.rs  meter.rs  rust_timer.rs  sdl.rs  simple.rs
examples/demo/: Cargo.toml  README.md  lv_conf.h
examples/demo/include/: lv_conf.h
examples/demo/src/: main.rs
examples/include/: lv_conf.h  lv_drv_conf.h
lvgl/: Cargo.toml  build.rs
lvgl-codegen/: Cargo.toml  build.rs
lvgl-codegen/src/: analysis.rs  lib.rs  main.rs
lvgl-codegen/templates/: style.rs.j2
lvgl-sys/: Cargo.toml  README.md  build.rs  string.c
lvgl-sys/include/: lvgl_sys.c  lvgl_sys.h
lvgl-sys/shims/: lvgl_drv.h  lvgl_sys.c  lvgl_sys.h
lvgl-sys/src/: bindings.rs  lib.rs  string_impl.rs
lvgl/src/: allocator.rs  api.rs  display.rs  functions.rs  global.rs  input_device.rs  lib.rs  mem.rs  objx.rs  point.rs  support.rs  timer.rs  ui.rs
lvgl/src/drivers/: lv_drv_display.rs  lv_drv_input.rs  mod.rs
lvgl/src/font/: generic.rs  mod.rs
lvgl/src/input_device/: encoder.rs  generic.rs  mod.rs  pointer.rs
lvgl/src/lv_core/: group.rs  mod.rs  obj.rs  object.rs  screen.rs  style.rs
lvgl/src/misc/: anim.rs  area.rs  mod.rs
lvgl/src/widgets/: arc.rs  bar.rs  btn.rs  button.rs  gauge.rs  keyboard.rs  label.rs  mod.rs  slider.rs  table.rs  textarea.rs
