[package]
name = "demo"
version = "0.1.0"
authors = ["Rafael Caricio <crates@caric.io>"]
edition = "2018"
publish = false

[dev-dependencies]
lvgl = { path = "../lvgl" }
lvgl-sys = { path = "../lvgl-sys" }
embedded-graphics = "0.6"
embedded-graphics-simulator = "0.2.0"
heapless = "0.5.5"
cstr_core = { version = "0.2.0", features = ["alloc"] }

[[example]]
name = "simple"
path = "simple.rs"

[[example]]
name = "demo"
path = "demo.rs"

[[example]]
name = "bar"
path = "bar.rs"

[[example]]
name = "button_click"
path = "button_click.rs"

[[example]]
name = "gauge"
path = "gauge.rs"

[[example]]
name = "arc"
path = "arc.rs"
