[package]
name = "lvgl-codegen"
version = "0.5.2"
description = "Code generation based on LVGL source code"
authors = ["Rafael Caricio <crates.lvgl@caric.io>"]
readme = "README.md"
edition = "2018"
license = "MIT"
repository = "https://github.com/rafaelcaricio/lvgl-rs"

[dependencies]
regex = "1.4.3"
quote = "1.0.9"
lazy_static = "1.4.0"
proc-macro2 = "1.0.24"
Inflector = "0.11.4"
syn = { version = "1.0.62", features = ["full"]}

