[package]
name = "lvgl-codegen"
version = "0.6.1"
description = "Code generation based on LVGL source code"
authors = ["Rafael Caricio <crates.lvgl@caric.io>"]
readme = "README.md"
edition = "2021"
license = "MIT"
repository = "https://github.com/rafaelcaricio/lvgl-rs"

[dependencies]
regex = "1.7.1"
quote = "1.0.23"
lazy_static = "1.4.0"
proc-macro2 = "1.0.51"
Inflector = "0.11.4"
syn = { version = "1.0.109", features = ["full"]}

