[package]
name = "lvgl-sys"
version = "0.1.0"
authors = ["Rafael Caricio <crates.lvgl-sys@caric.io>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/rafaelcaricio/lvgl-rs"
build = "build.rs"
links = "lvgl"

[lib]
name = "lvgl_sys"

[dependencies]
cty = "0.2.1"

[build-dependencies]
cc = "1.0.50"
bindgen = "0.53.2"
