[package]
name = "lvgl-sys"
description = "Raw bindings to the LittlevGL C library."
version = "0.5.0"
authors = ["Rafael Caricio <crates.lvgl-sys@caric.io>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/rafaelcaricio/lvgl-rs"
repository = "https://github.com/rafaelcaricio/lvgl-rs"
readme = "README.md"
categories = ["external-ffi-bindings", "embedded", "gui", "no-std"]
keywords = ["littlevgl", "lvgl"]
build = "build.rs"
links = "lvgl"

[lib]
name = "lvgl_sys"

[dependencies]
cty = "0.2.1"

[build-dependencies]
cc = "1.0.50"
bindgen = "0.54.0"
