[package]
name = "lvgl-sys"
description = "Raw bindings to the LVGL C library."
version = "0.5.2"
authors = ["Rafael Caricio <crates.lvgl-sys@caric.io>"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/rafaelcaricio/lvgl-rs"
repository = "https://github.com/rafaelcaricio/lvgl-rs"
readme = "README.md"
categories = ["external-ffi-bindings", "embedded", "gui", "no-std"]
keywords = ["littlevgl", "lvgl"]
build = "build.rs"
links = "lvgl"

[lib]
name = "lvgl_sys"

[dependencies]
cty = "0.2.2"

[build-dependencies]
cc = "1.0.79"
bindgen = "0.64.0"

[features]
use-vendored-config = []
drivers = []
rust_timer = []
