[package]
name = "demo"
version = "0.1.0"
authors = ["Rafael Caricio <crates@caric.io>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lvgl-sys = { path = "../../lvgl-sys" }
lvgl = { path = "../../lvgl" }
sdl2 = "0.33.0"
lazy_static = "1.4.0"
